--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,21 @@
-name: Jekll Test Site
+# Default, Defaults
+name: Test
 markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
+
+# Jekyll Defaults
+title: Jekyll Hyde
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+# Developement URL ONLY
+url: "http://localhost:3000" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
+
+# Build settings
+#markdown: kramdown
